--- a/src/main/resources/templates/contas/adicionar-conta.html
+++ b/src/main/resources/templates/contas/adicionar-conta.html
@@ -12,7 +12,7 @@
     <form th:action="@{/contas/adicionar}" th:object="${contasdomes}" method="post">
         <div class="mb-3">
             <label for="descricao" class="form-label">Descrição</label>
-            <input type="text" th:field="*{descrição}" id="descricao" class="form-control" placeholder="Descrição da conta" required>
+            <input type="text" th:field="*{descricao}" id="descricao" class="form-control" placeholder="Descrição da conta" required>
         </div>
         <div class="mb-3">
             <label for="valor" class="form-label">Valor</label>
